--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../dist/output.css" rel="stylesheet" type="text/css" />
+    <script src="scripts/indexScripts.js"></script>
   </head>
   <body>
     <div class="mt-12 ml-12">
         <h1 class="text-4xl font-sans font-bold mb-6">Section Title</h1>
-        <div class="flex flex-row overflow-x-auto ">
+        <div class="flex flex-row overflow-x-auto " id="list">
             
             <div class="flex flex-col flex-shrink-0 mr-5">
-                <img class="w-auto h-auto hover:scale-105 hover:cursor-pointer ease-in-out duration-500" src="./images/Placeholder_Image.png"></img>
+                <img class="w-auto h-auto hover:scale-105 hover:cursor-pointer  ease-in-out duration-500" src="./images/Placeholder_Image.png"></img>
                 <div class=" text-base mt-6 text-2xl"> Title</div>
             </div>
             <div class="flex flex-col flex-shrink-0 mr-5">
