Added the correct name for the id

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="mt-12 ml-12">
         <h1 class="text-4xl font-sans font-bold mb-6">Section Title</h1>
-        <div class="flex flex-row overflow-x-auto " id="list">
+        <div class="flex flex-row overflow-x-auto " id="listToBeDragged">
             
             <div class="flex flex-col flex-shrink-0 mr-5">
                 <img class="w-auto h-auto hover:scale-105 hover:cursor-pointer  ease-in-out duration-500" src="./images/Placeholder_Image.png"></img>
