--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
+<!-- HTML Code validated using W3C validator at: https://validator.w3.org/-->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../dist/output.css" rel="stylesheet" type="text/css" />
-    <link href="./svg.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title>Venture Stream Challenge</title>
+    <link href="../dist/output.css" rel="stylesheet" type="text/css" >
+    <link href="./svg.css" rel="stylesheet" type="text/css" >
     <script src="scripts/indexScripts.js"></script>
   </head>
   <body>
@@ -17,7 +19,5 @@
 
 <!--
     Responsive Design
-    Comment Code
-    Validate HTML
 
 -->
