Added responsive design
When the page goes below 600px in width the cards change size.

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!-- HTML Code validated using W3C validator at: https://validator.w3.org/-->
+<!-- HTML Code validated using W3C validator at: https://validator.w3.org/ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,9 +10,9 @@
     <script src="scripts/indexScripts.js"></script>
   </head>
   <body>
-    <div class="mt-12 ml-12">
-      <h1 class="text-4xl font-sans font-bold mb-6">Section Title</h1>
-      <div class="flex flex-row overflow-x-hidden" id="listToBeDragged"></div>
+    <div class="mt-12 ml-12 ">
+      <h1 class="text-3xl sm:text-4xl font-sans font-bold mb-6 ">Section Title</h1>
+      <div class="flex flex-row overflow-x-hidden " id="listToBeDragged"></div>
     </div>
   </body>
 </html>
